--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://kshreyas200129:admin@ue.wt7belt.mongodb.net/?retryWrites=true&w=majority&appName=UE
+REACT_APP_SERVER_IP=http://192.168.0.103:5000
