--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "my-manpower-dashboard",
     "version": "1.0.0",
     "scripts": {
-      "start": "node backend/server.js",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+      "start": "cd backend && node server.js",
+      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
+       "build": "cd frontend && npm install && npm run build",
+       "install-backend": "cd backend && npm install"
     },
     "engines": {
       "node": "20.13.1",
