--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "npx react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
