--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "my-manpower-dashboard",
     "version": "1.0.0",
     "scripts": {
-      "start": "cd backend && node server.js",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
-       "build": "cd frontend && npm install && npm run build",
-       "install-backend": "cd backend && npm install"
+      "install-backend": "cd backend && npm install",
+    "install-frontend": "cd frontend && npm install",
+    "build-frontend": "cd frontend && npm run build",
+    "start": "cd backend && node server.js",
+    "build": "npm run install-backend && npm run install-frontend && npm run build-frontend"
     },
     "engines": {
       "node": "20.13.1",
