--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.17",
     "lucide-react": "^0.414.0",
     "postcss": "^8.4.39",
     "react": "^18.3.1",
